Implementing following changes: - fix name column width - ensure error icons fit - truncate “properties” - truncate instance name - truncate endpoint name

--- a/src/ServicePulse.Host/app/css/particular.css
+++ b/src/ServicePulse.Host/app/css/particular.css
@@ -425,18 +425,21 @@ body {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.righ-side-ellipsis {
     direction: rtl;
     text-align: left;
 }
 
 @supports (-ms-ime-align:auto) {
-    .message-type-label .lead {
+    .righ-side-ellipsis {
         direction: ltr;
     }
 }
 
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-    .message-type-label .lead {
+    .righ-side-ellipsis {
         direction: ltr;
     }
 }
@@ -2021,7 +2024,7 @@ h1 .endpoint-status i.fa-envelope, .endpoint-status i.fa-exclamation-triangle {
     color: #8C8C8C;
     font-weight: normal;
     font-size: 12px;
-    float: left;
+    display: inline-block;
 }
 
 i.fa-exclamation-triangle {
@@ -2127,6 +2130,9 @@ i.fa-exclamation-triangle {
 .row.message-type-properties {
     position: relative;
     top: -5px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 i.fa.pa-endpoint-lost.endpoints-overview, i.fa.pa-monitoring-lost.endpoints-overview {
